EEP-RAN-229: Unable to complete Ranger configuration on env with Java 17 because of setup.sh failure